[package]
name = "rustitions"
description = "A Rust State Machine Library Modeled After PyTransitions"
version = "0.1.0"
authors = ["Evan Williams <ejw@fig.com>"]
readme = "README.md"
repository = "https://github.com/evanjpw/rustitions.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
strum_macros = "0.19.2"
strum = "0.19.2"
indexmap = "1.6.0"
append = "0.2.0"
